<resources>
    <string name="app_name">ProjectVocabulary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="title_activity_register">Sign in</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="begin">BEGIN YOUR SESSION</string>
    <string name="cur_email">Your current email:</string>
    <string name="cur_fir_name">Your  current first name:</string>
    <string name="cur_las_name">Your current last name:</string>
    <string name="update">Update</string>
    <string name="new_email">Your new email:</string>
    <string name="new_fir_name">Your new first name:</string>
    <string name="new_las_name">Your new last name:</string>
    <string name="cred_changed">Your credentials have changed. If you want to contiue using the application you need to log in again.</string>
    <string name="conn_failed">Connection failed. Try again later</string>
    <string name="not_connected">Your device is not connected to the internet.</string>
</resources>
